# AI-Job-Recommendation

./: .gitignore  AI_Job_Recommendation.ipynb  README.md  main.py  pyproject.toml  requirements.txt
cache/: job_results_cache.json
faiss_index/: index.faiss  index.pkl
src/: recommender.py  resume_parser.py  retriever.py
tests/: resume_parser_test.py
ui/: app.py
